data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_501.wast
;; 2. **Test Description:**    - Design a loop with a conditional branch (`br_if`) that should break out of the loop. Introduce a type mismatch in the loop to see if the `br` instruction handles it correctly.    - **Constraint Checking:** Validates that the `br` instruction checks the operand stack correctly against the target label's expected types.    - **Relation to Infinite Loops:** If the branch does not execute due to type mismatches, the loop may run indefinitely.

(assert_invalid
  (module (func $type-mismatch-loop
    (loop $loop (result i32)
      (i32.const 0)
      (br_if $loop (i32.const 1))
      (i32.const 2)
    )
  ))
  "type mismatch"
)